https://build.reactos.org/builders/Test%20KVM
{{Mar 21 12:01 9d816efc05b5... failure #19844}}
Running Wine Test, Module: user32, Test: winstation
|
...
|
(win32ss/user/ntuser/msgqueue.c:1271) err: MsqSendMessage timed out 2 Status 102
|
...
|
(ntoskrnl/mm/ARM3/procsup.c:409) Thread wants too much stack
|
(win32ss/user/ntuser/callback.c:350) err: Error Callback to User space Status c00000fd Message 70
|
...
|
(ntoskrnl/mm/ARM3/procsup.c:409) Thread wants too much stack
|
(win32ss/user/ntuser/callback.c:350) err: Error Callback to User space Status c00000fd Message 70
|
|
*** Fatal System Error: 0x0000007f
|
(0x00000008,0x00000000,0x00000000,0x00000000)
|
|
|
Entered debugger on embedded INT3 at 0x0008:0x8094c704.
|
kdb:>
|
bt
|
Eip:
|
<NTOSKRNL.EXE:14c705 (:0 (RtlpBreakWithStatusInstruction))>
|
Frames:
|
<NTOSKRNL.EXE:884ad (ntoskrnl/ke/bug.c:1100 (KeBugCheckWithTf))>
|
<NTOSKRNL.EXE:12b84f (ntoskrnl/ke/i386/exp.c:1144 (KiSystemFatalException))>
|
<NTOSKRNL.EXE:12f8d3 (ntoskrnl/ke/i386/traphdlr.c:856 (KiTrap08Handler))>
|
<NTOSKRNL.EXE:335e (:0 (KiTrap08))>
|
<NTOSKRNL.EXE:143aba (ntoskrnl/kd/kdio.c:580 (KdpPrintString))>
|
<NTOSKRNL.EXE:143c31 (ntoskrnl/kd/kdmain.c:52 (KdpServiceDispatcher))>
|
<NTOSKRNL.EXE:143dee (ntoskrnl/kd/kdmain.c:147 (KdpEnterDebuggerException))>
|
<NTOSKRNL.EXE:12b31b (ntoskrnl/ke/i386/exp.c:905 (KiDispatchException))>
|
<NTOSKRNL.EXE:12b813 (ntoskrnl/ke/i386/exp.c:1126 (KiDispatchExceptionFromTrapFrame))>
|
<NTOSKRNL.EXE:12e881 (ntoskrnl/ke/i386/traphdlr.c:231 (KiDebugHandler))>
|
<NTOSKRNL.EXE:130b07 (ntoskrnl/ke/i386/traphdlr.c:1667 (KiDebugServiceHandler))>
|
<NTOSKRNL.EXE:3ba1 (:0 (KiDebugService))>
|
<NTOSKRNL.EXE:14c72c (:0 (DebugService))>
|
<NTOSKRNL.EXE:14c76c (sdk/lib/rtl/debug.c:28 (DebugPrint))>
|
<NTOSKRNL.EXE:14c93e (sdk/lib/rtl/debug.c:138 (vDbgPrintExWithPrefixInternal))>
|
<NTOSKRNL.EXE:14ca30 (sdk/lib/rtl/debug.c:211 (DbgPrint))>
|
<NTOSKRNL.EXE:bb04d (ntoskrnl/mm/ARM3/procsup.c:409 (MmGrowKernelStackEx))>
|
<NTOSKRNL.EXE:bb23f (ntoskrnl/mm/ARM3/procsup.c:466 (MmGrowKernelStack))>
|
<NTOSKRNL.EXE:131281 (ntoskrnl/ke/i386/usercall.c:282 (KiUserModeCallout))>
|
<NTOSKRNL.EXE:3f52 (:0 (KiCallUserMode))>
|
<win32k.sys:220b2 (win32ss/user/ntuser/callback.c:343 (co_IntCallWindowProc))>
|
<win32k.sys:53f92 (win32ss/user/ntuser/message.c:1412 (co_IntSendMessageTimeoutSingle))>
|
<win32k.sys:5457b (win32ss/user/ntuser/message.c:1507 (co_IntSendMessageTimeout))>
|
<win32k.sys:546ce (win32ss/user/ntuser/message.c:1298 (co_IntSendMessage))>
|
<win32k.sys:3b9b6 (win32ss/user/ntuser/focus.c:762 (co_IntSetForegroundMessageQueue))>
|
<win32k.sys:3c1ca (win32ss/user/ntuser/focus.c:872 (co_IntSetForegroundAndFocusWindow))>
|
<win32k.sys:3cbb1 (win32ss/user/ntuser/focus.c:1436 (co_IntSetForegroundWindow))>
|
<win32k.sys:83c1a (win32ss/user/ntuser/winpos.c:2082 (co_WinPosSetWindowPos))>
|
...
|
<win32k.sys:3b9f3 (win32ss/user/ntuser/focus.c:766 (co_IntSetForegroundMessageQueue))>
|
<win32k.sys:3c1ca (win32ss/user/ntuser/focus.c:872 (co_IntSetForegroundAndFocusWindow))>
|
<win32k.sys:3cbb1 (win32ss/user/ntuser/focus.c:1436 (co_IntSetForegroundWindow))>
|
<win32k.sys:83c1a (win32ss/user/ntuser/winpos.c:2082 (co_WinPosSetWindowPos))>
|
<win32k.sys:8501a (win32ss/user/ntuser/winpos.c:2585 (co_WinPosShowWindow))>
|
<win32k.sys:87572 (win32ss/user/ntuser/winpos.c:3621 (NtUserShowWindow))>
|
<NTOSKRNL.EXE:130d4e (ntoskrnl/include/internal/i386/ke.h:712 (KiSystemServiceHandler))>
|
<NTOSKRNL.EXE:3da9 (:0 (KiFastCallEntry))>
|
|
*** Fatal System Error: 0x0000000a
|
(0x7FFAF00C,0xFFFFFFFF,0x00000000,0x809428E4)
|
|
|
Entered debugger on embedded INT3 at 0x0008:0x8094c704.
|
[SYSREG] timeout
|