ntoskrnl/ke/i386/usercall.c
@@ -282,7 +282,15 @@ KiUserModeCallout(PKCALLOUT_FRAME CalloutFrame)
         Status = MmGrowKernelStack((PVOID)InitialStack);
 
         /* Quit if we failed */
-        if (!NT_SUCCESS(Status)) return Status;
+        if (!NT_SUCCESS(Status))
+        {
+            if (Status == STATUS_STACK_OVERFLOW)
+            {
+                DPRINT1("Thread wants too much stack\n");
+            }
+
+            return Status;
+        }
     }
 
     /* Save the current callback stack and initial stack */
